@@ -9,6 +9,7 @@
 * Added: HTTP Basic authentication support (Yuen-Chi Lian).
 * Added: EAR packaging (Victor Hugo Borja).
 * Added: Profiles(.yaml), based on the code provided by Yanko Ivanov.
+* Added: Resources task picks the default mapping from the filter element of the current profile (if specified).
 * Added: Consolidated API for RJB and JRuby, replacing the now deprecated JavaWrapper.
 * Added: JRuby 1.1 support (Victor Hugo Borja, Nick Sieger).
 * Added: IDEA 7 task: use buildr idea7x (Shane Witbeck).
